Minor improvements to details fetch and display

--- a/design/src/main/res/values/dimens.xml
+++ b/design/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="standard">16dp</dimen>
     <dimen name="medium_large">24dp</dimen>
     <dimen name="large">32dp</dimen>
+    <dimen name="xlarge">128dp</dimen>
 </resources>
